Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

27-May-2012 Jean-Marie Simonet
 # [#28022] Smart search and unpublished Content Maps fails after edit of an article.Thanks Michael.

25-May-2012 Jean-Marie Simonet
 $ Updating installation ini file: ug-CN
 $ Adding new installation language: hi-IN

23-May-2012 Jean-Marie Simonet
 ^ [#28547] ACL consistency - Use the API and access.xml everywhere. Thanks Michael.
 # [#28483] *Weblinks module should only pass on category related queries when catid > 0

22-May-2012 Jean-Marie Simonet
 # [#28555] Fix files that are CRLF. Thanks Rouven.

21-May-2012 Jean-Marie Simonet
 # [#21946] Reverting [#27700]
 ^ [#28553] Improve code for 28205. Thanks Rouven.

20-May-2012 Jean-Marie Simonet
 # [#28546] Trunk is broken due to a PHP error in JComponentHelper
 # [#28521] Use doExecute instead of execute in CLI scripts. Thanks Michael.
 $ Updating installation ini files: az-AZ, tr-TR, zh-TW

19-May-2012 Jean-Marie Simonet
 # [#28419] Remove warnings for undeprecated code. Fix a bug in JView in the process. Thanks Rouven.

18-May-2012 Jean-Marie Simonet
 + Adding Laotian lo.gif flag to media/mod_languages

17-May-2012 Jean-Marie Simonet
 $ Updating installation ini files: ar-AA, de-DE, ja-JP, lv-LV, sq-AL, ta-IN

16-May-2012 Jean-Marie Simonet
 $ Updating installation ini files: bg-BG, ckb-IQ, da-DK, eo-XX, es-ES, fi-FI, fr-FR, it-IT, km-KH, lo-LA, mk-MK, ru-RU, sr-RS, sr-YU, sv-SE, uk-UA

15-May-2012 Jean-Marie Simonet
 #$ [#27651] JInstallationModelDatabase::initialise has hard coded MySQL version check. Thanks Michael

12-May-2012 Jean-Marie Simonet
 + [#28472] Add ability to copy a template. Thanks Mark
 +$ Adding eo-XX installation language

11-May-2012 Jean-Marie Simonet