@@ -4,7 +4,7 @@
  * @subpackage	com_joomlaupdate
  * @copyright	Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
- * @since		1.0
+ * @since		2.5.4
  */
 
 // no direct access
