@@ -26,7 +26,7 @@ COM_TEMPLATES_ERROR_EDITOR_DISABLED="Either the CodeMirror or the None editor pl
 COM_TEMPLATES_ERROR_EXTENSION_RECORD_NOT_FOUND="Extension record not found in database"
 COM_TEMPLATES_ERROR_FAILED_TO_SAVE_FILENAME="An error occurred. The file %s could not be saved."
 COM_TEMPLATES_ERROR_INVALID_FROM_NAME="Template to copy from cannot be found."
-COM_TEMPLATES_ERROR_INVALID_TEMPLATE_NAME="Invalid template name. Please use only letters, numbers, dashes, and underscrores."
+COM_TEMPLATES_ERROR_INVALID_TEMPLATE_NAME="Invalid template name. Please use only letters, numbers, dashes, and underscores."
 COM_TEMPLATES_ERROR_SAVE_DISABLED_TEMPLATE="Unable to save a style associated to a disabled template"
 COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_FOUND="Source file not found"
 COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_UNWRITABLE="Source file can't be returned to unwritable status"
@@ -94,7 +94,7 @@ COM_TEMPLATES_TEMPLATE_EDIT_PRINTVIEW="Edit print view template"
 COM_TEMPLATES_TEMPLATE_FILENAME="Editing file "_QQ_"%s"_QQ_" in template "_QQ_"%s"_QQ_"."
 COM_TEMPLATES_TEMPLATE_HTML="HTML files"
 COM_TEMPLATES_TEMPLATE_MASTER_FILES="Template Master Files"
-COM_TEMPLATES_TEMPLATE_NEW_NAME_DESC="New Title Name::Enter the name of the new template. Please use letters, numbers, and underscore only."
+COM_TEMPLATES_TEMPLATE_NEW_NAME_DESC="New Template Name::Enter the name of the new template. Please use letters, numbers, and underscore only."
 COM_TEMPLATES_TEMPLATE_NEW_NAME_LABEL="New Template Name"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available. You can enable preview in the options."
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW_ADMIN="No preview available for Administrator templates"
